HelloUltraviolet/Fixtures/RejectedSource/Comptime/UserDiagnosticError/Expected.uv
//! Expected diagnostic metadata for the UserDiagnosticError rejected-source specimen.

expectedDiagnostic("E-CTE-0070", "rule.22.CtBuiltin-Diagnostics-Error")
expectedDiagnostic("E-CTE-0070", "requirement.22.UserDiagnosticBuiltinEmission")
